--- a/index.html
+++ b/index.html
@@ -4,23 +4,56 @@
 <head>
 
     <title>About Me</title>
-    <link rel="stylesheet" href="./lab02.css">
+    <!-- <link rel="stylesheet" href="./css/reset.css"> -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header> Lab02</header>
+    <header> 02</header>
 
     <main>
-        <h1>Welcome to 201</h1>
-        <p> welcome to my page.. I am Enas.. one of the lucky partcipant of the <acronym
-                title="https://www.facebook.com/ASAC.LTUC/"> <q>ASAC</q> </acronym> scholar ship, I have studied
+        <h1>Welcome to my page</h1>
+        <div class="box">
+            <p class= "on">I am Enas.. one of the lucky partcipant of the <acronym title="https://www.facebook.com/ASAC.LTUC/">
+                    <q>ASAC</q> </acronym> scholar ship, I have studied
 
-            computer science at yarmouk univerity, I have worked for 5 years in different fields before, this is my
+                computer science at yarmouk univerity, I have worked for 5 years in different fields before, this is my
 
-            1<sup>st</sup> time to focus working in my major, now I put all my efforts to be an excellent programmer
+                1<sup>st</sup> time to focus working in my major, now I put all my efforts to be an excellent programmer
+            </p>
+            <br>
+            <p>  My eduaction :</p>
+            <ul> <li> Bacholar degree in IT field</li>
+            <li> programming student in ASAC</li>
+            
+            </ul>
+            <br>
+
+            <ul>Experiences
+            <li>"Technical support at "JSC"</li>
+            <li>CSR at Extensya</li>
+
+        </ul>
 
 
-        </p>
+            <br>
+            <br>
+            <h2>My top yen faviouite flowes</h2>
+            <img src="https://ia1.pickupflowers.com/images/assets/images/flower-guide/national-flowers.jpg" alt="">
+            <ol>
+                <li>Rose</li>
+                <li> Gerbera</li>
+                <li> Tulip</li>
+                <li>Lily </li>
+                <li>Calla lily</li>
+                <li>Orchid</li>
+                <li>Iris</li>
+                <li>Carnation</li>
+                <li> Sunflower</li>
+                <li>Fossil Hydrangea</li>
+            </ol>
+
+
     </main>
 
 
@@ -32,7 +65,7 @@
     <footer>
         &copy; by Enas
     </footer>
-<script src="lab02.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
